# krx-json-data

./: .gitattributes  .gitignore  README.md  getIndexJson.py  getPriceJson.py  getjson.py  pyproject.toml  requirements.txt  update_all_data.py  update_json_data.py
AdjustedPrice/: README.md  get_pykrx_adjusted.py  pykrx_etf_manifest.json  pykrx_manifest.json  pykrx_stock_manifest.json
ELW/: getjson.py
ELW/2020/: 20200103.json  20200106.json  20200108.json  20200110.json  20200115.json  20200120.json  20200122.json  20200123.json  20200128.json  20200130.json  20200131.json  20200203.json  20200207.json  20200211.json  20200212.json  20200214.json  20200217.json  20200218.json  20200220.json  20200224.json  20200225.json  20200227.json  20200302.json  20200306.json  20200313.json  20200317.json  20200318.json  20200320.json  20200325.json  20200326.json  20200327.json  20200330.json  20200406.json  20200408.json  20200410.json  20200417.json  20200421.json  20200424.json  20200428.json  20200429.json  (+68 more)
ELW/2021/: 20210105.json  20210107.json  20210108.json  20210112.json  20210113.json  20210115.json  20210118.json  20210120.json  20210122.json  20210125.json  20210127.json  20210201.json  20210202.json  20210205.json  20210210.json  (+110 more)
ETF/: getjson.py
MakeDB/: README.md  generate_sql_inserts.py  generate_sql_range.py  makedb.py  run_inserts.sh
Parse/: build_parquet_all.py  json_to_parquet.py  parse.py  run_parquet_all.sh
STOCK/: getjson.py
tests/: test_adjusted_price_pykrx.py  test_json_to_parquet.py  test_update_all_data.py  test_update_json_data.py
(+13445 files in other folders)
