[project]
name = "krx-json-data"
version = "0.1.0"
description = "KRX JSON data collectors and adjusted-price research datasets"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4==4.12.3",
    "bs4==0.0.2",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "config==0.5.1",
    "idna==3.6",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "pykrx>=1.0.51",
    "requests==2.31.0",
    "soupsieve==2.5",
    "urllib3==2.2.1",
]

[tool.uv]
package = false
